# fastfmt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  defmt.h  defmt.ld  fastfmt.c  fastfmt.h  fastfmt.ld  fastfmt_preproc.h  log_output.c  log_output.h  main.c  preproc.h  vlog.c
example/: CMakeLists.txt  fastfmt_sink_ex.ld
lib/: fastfmt.c  fastfmt.h  fastfmt_preproc.h
lib/rzcobs/: CMakeLists.txt  rzcobs.c  rzcobs.h
lib/rzcobs/tests/: CMakeLists.txt  rzcobs_encode_test.cc
parser/: go.mod  go.sum  main.go
parser/rzcobs/: rzcobs.go  rzcobs_test.go
